# translation-inference

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: plan-upcoming-features.md  speaches-reference.json
src/: config.rs  main.rs  models.rs  static_files.rs
src/api/: chat.rs  chunker.rs  client.rs  mod.rs  whisper.rs
src/document/: docx.rs  mod.rs  odt.rs  pdf.rs
src/routes/: bitvault.rs  config.rs  detect_language.rs  document.rs  extractors.rs  languages.rs  mod.rs  models.rs  subtitle.rs  transcribe.rs  translate.rs  translate_paragraphs.rs  tts.rs  upload.rs
src/subtitle/: mod.rs
static/: app.js  index.html  openapi.yaml  style.css  swagger.html
