[package]
name = "translation-inference"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
tempfile = "3"
genpdf = "0.2"
regex = "1"
zip = "2"
base64 = "0.22"
reqwest-eventsource = "0.6.0"
futures = "0.3.32"
tokio-stream = "0.1.18"
async-stream = "0.3.6"
uuid = { version = "1", features = ["v4"] }
url = "2"
